# avid_c24_oscquery

./: .gitmodules  CMakeLists.txt  README.md
src/: c24_parameter.cpp  c24_parameter.hpp  c24_protocol.cpp  c24_protocol.hpp  device_parameter.cpp  device_parameter.hpp  main.cpp
